[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "PHPlus"
version = "0.0.1"
description = "Absolutni Sracka"
authors = [
    { name = "Filip Jurkenik", email = "jurkefi24@sps-prosek.cz" }
]
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]

dev = [
    "pytest",
]

[project.scripts]

phplus = "compiler:main"